--- a/public/css/password_show.css
+++ b/public/css/password_show.css
@@ -1,1 +1,12 @@
-body,html{width:100%;margin:0;height:100%}.card-body{font-size:6vw!important;text-align:center}
+html,
+body {
+  width: 100%;
+  margin: 0;
+  height: 100%;
+}
+
+.card-body {
+  font-size: 6vw !important;
+  text-align: center;
+}
+
